k8s/argocd-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: argocd-mtls
  namespace: argocd
spec:
  mtls:
    mode: PERMISSIVE
